# TopoGPU

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
cases/: cantilever_3d.yaml  production_suite.yaml  stress_suite.yaml
ci/: smoke_test.py
docs/: ARTIFACT_MAP.md  api.md  benchmark_reproduction.md  case_definitions.md  citation.md  evidence_bundles.md  examples.md  index.md  installation.md  limitations.md  quickstart.md  rendering.md  reproducibility.md  solver_options.md  troubleshooting_cuda.md  yaml_suites.md
examples/: asymmetric_bracket.py  cantilever_3d.py  cantilever_3d_cpu.py  custom_yaml_case.py  portal_bridge.py  verify_numerics.py
experiments/paper4/: README.md  benchmark_linear_solves.py  benchmark_simp_paper4.py  estimate_preconditioned_kappa.py  run_experiments_e1_e10.py  validate_phase1.py  verify_level1_galerkin.py
experiments/tool_paper/: baseline_ablation.py  bc_load_schematics.py  build_toolpaper_artifacts.py  (+14 more)
figures/: make_3d_renders.py  plot_figures.py
paper/: paper.bib  paper.md  submission_checklist.md
scripts/: build_artifact_pack.py  make_figures.py  run_benchmarks.py  run_verification.py
tests/: test_case_gallery.py  test_cli_lightweight.py  test_cli_verify.py  test_density_filter_uniform.py  test_energy_consistency.py  test_evidence_bundle.py  test_import.py  test_matrix_free_operator.py  test_public_api.py  test_sensitivity_fd.py  test_small_cpu_solve.py  test_small_cuda_solve.py
(+18 files in other folders)
